# pi-image-builder-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  create-test-image.bash  setup-dev.bash
components/configuration/: Cargo.toml
components/configuration/src/: main.rs
components/configuration/src/configuration/: mod.rs  models.rs
components/image/: Cargo.toml
components/image/src/: main.rs
components/image/src/config/: fstab.rs  mod.rs
components/image/src/configuration/: models.rs
components/image/src/fetch_media/: mod.rs
components/image/src/filesystem/: filesystem.rs  mod.rs
components/image/src/mount/: mod.rs
components/image/src/partitioning/: mod.rs  partition.rs
components/image/templates/etc/: fstab
src/: main.rs
src/compression/: mod.rs
src/config/: fstab.rs  mkinitcpio.conf  mod.rs
src/configuration/: kernel_config.rs  mod.rs  models.rs
src/download/: mod.rs
src/extraction/: mod.rs
src/fetch_media/: mod.rs
src/filesystem/: filesystem.rs  mod.rs
src/loop_shenanigans/: mod.rs
src/lvm/: mod.rs
src/mount/: mod.rs
src/partitioning/: lvm.rs  mod.rs  partition.rs
templates/boot/: boot.txt
