[package]
name = "pi-image-builder-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[dependencies]
bytes = "1.2.1"
loopdev = { git = "https://github.com/mdaffin/loopdev", rev = "64a8ddb", version = "0.5.0" }
lvm-rs = { git = "https://github.com/LadySerena/lvm-rs.git", version = "0.1.0", branch = "main" }
size = "0.4.1"
mbrman = "0.5.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
scopeguard = "1.1.0"
xz2 = "0.1.7"
bdfs-sys = { git = "https://github.com/LadySerena/bdfs-sys.git", branch = "main", version = "0.1.0" }
md-5 = "0.10.5"
flate2 = "1.0.24"
tar = "0.4.38"
sys-mount = "2.0.1"
alpm = "2.2.1"
askama = "0.11.1"

[dev-dependencies]
indoc = "1.0.8"
mockall = "0.11.3"
tempdir = "0.3.7"


